# Traffic-Simulation

./: .gitignore  CMakeLists.txt  LPSim_Implementation_Report.docx  README.md  REAL_DATA_QUICKSTART.md
benchmarks/: results.csv
data/processed/basic/: demand.csv  network.csv
data/processed/partial_500/: demand.csv  network.csv
include/: lpsim.cuh
scripts/: benchmark_plots.py  plot_benchmark_results.py  prepare_inputs.py  run_benchmark_matrix.sh
src/: main.cu  multi_gpu.cu  partitioning.cpp  propagation.cu
